fix radius img, css badje, align btn-co back

--- a/src/components/CamperCard/CamperCard.module.css
+++ b/src/components/CamperCard/CamperCard.module.css
@@ -9,6 +9,7 @@
   width: 292px;
   height: 320px;
   object-fit: cover;
+  border-radius: 10px;
 }
 
 .CatalogCardInfo {
