--- a/src/components/CamperFeatures/CamperFeatures.module.css
+++ b/src/components/CamperFeatures/CamperFeatures.module.css
@@ -10,6 +10,7 @@
   padding: 12px 18px;  
   height: 48px;
   background-color: var(--badges);
+  mix-blend-mode: multiply;
   display: flex;
   gap: 8px;
   align-items: center;
